# beetrace

./: .gitignore  README.md  dfx.json
frontend/: package-lock.json  package.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: backend.did  lib.rs
src/frontend/: README.md  index.html  next.config.ts  package-lock.json  package.json
src/frontend/components/: Layout.tsx  WalletContext.tsx
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: FeaturesSection.tsx  Footer.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  StatsSection.tsx
src/frontend/src/lib/: routes.ts
src/frontend/src/pages/: Credits.tsx  Dashboard.tsx  Index.tsx  Invest.tsx  InvestorDashboard.tsx  LearnWallet.tsx  Marketplace.tsx  Profile.tsx  ProfileSettings.tsx  RoleSelection.tsx  TrackHoney.tsx  WalletLogin.tsx  _app.tsx  index.tsx
src/frontend/src/pages/beekeeper/: index.tsx
src/frontend/src/pages/investor/: index.tsx
src/frontend/src/pages/marketplace/: index.tsx
src/frontend/src/pages/trace/: [batchId].tsx
